# rust-telegram-inventory-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  matches.yml
src/: main.rs
