[package]
name = "inventory-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.17"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.10.1", features = ["macros", "auto-send"] }
serde = "1.0.138"
serde_yaml = "0.8.24"
reqwest =  "0.11.11" 
regex = "1.6.0"
serde_regex = "1.1.0"
